Finish first window Helper

--- a/src/index.html
+++ b/src/index.html
@@ -242,161 +242,6 @@
                 <span>запишитесь на бесплатную консультацию</span> 
             </div>
             <div class="service__wrapper">
-                <div class="service__item">
-                    <img class="service__item_img" src="img/service/surgery.png" alt="surgery">
-                    <div class="service__item_title title title_fz28">
-                        Хирургия
-                    </div>
-                    <div class="service__item_descr">
-                        Удаление зуба является одной из самых распространенных операций в стоматологической практике.
-                    </div>
-                    <ul class="service__item_list">
-                        <li>Удаление зубов любой сложности</li>
-                    </ul>
-                    <div class="messengers">
-                        <div class="messengersIcons">
-                            <img src="icons/telegram.svg" alt="telegram">
-                            <img src="icons/whatsApp.svg" alt="whatsApp">
-                        </div>
-                        <div>спросить в мессенджере</div>
-                    </div>
-                    <div class="service__item_btns">
-                        <button class="signUpBtn btn">Записаться</button>
-                        <button class="priceBtn btn">Узнать цены</button>
-                    </div>
-                </div>
-
-
-                <div class="service__item">
-                    <img class="service__item_img" src="img/service/therapy.png" alt="therapy">
-                    <div class="service__item_title title title_fz28">
-                        Терапия
-                    </div>
-                    <div class="service__item_descr">
-                        Лечение напрямую зависит от стадии заболевания. Мы подбираем наиболее эффективные методы диагностики и терапии.
-                    </div>
-                    <ul class="service__item_list">
-                        <li>Кариозных и некариозных поражений</li>
-                        <li>Пульпитов и периодонтитов</li>
-                        <li>Художественная реставрация зубов</li>
-                    </ul>
-                    <div class="messengers">
-                        <div class="messengersIcons">
-                            <img src="icons/telegram.svg" alt="telegram">
-                            <img src="icons/whatsApp.svg" alt="whatsApp">
-                        </div>
-                        <div>спросить в мессенджере</div>
-                    </div>
-                    <div class="service__item_btns">
-                        <button class="signUpBtn btn">Записаться</button>
-                        <button class="priceBtn btn">Узнать цены</button>
-                    </div>
-                </div>
-
-                <div class="service__item">
-                    <img class="service__item_img" src="img/service/orthopedics.png" alt="orthopedics">
-                    <div class="service__item_title title title_fz28">
-                        Ортопедия
-                    </div>
-                    <div class="service__item_descr">
-                        Помогает решить проблемы, связанные с аномалиями, приобретенными дефектами, повреждениями и деформациями органов жевательно-речевого аппарата.
-                    </div>
-                    <ul class="service__item_list">
-                        <li>Коронки и мосты керамические</li>
-                        <li>Коронки и мосты циркониевые</li>
-                        <li>Съёмное протезирование (протезы, бюгеля, мягкие протезы)</li>
-                        <li>Установка виниров</li>
-                    </ul>
-                    <div class="messengers">
-                        <div class="messengersIcons">
-                            <img src="icons/telegram.svg" alt="telegram">
-                            <img src="icons/whatsApp.svg" alt="whatsApp">
-                        </div>
-                        <div>спросить в мессенджере</div>
-                    </div>
-                    <div class="service__item_btns">
-                        <button class="signUpBtn btn">Записаться</button>
-                        <button class="priceBtn btn">Узнать цены</button>
-                    </div>
-                </div>
-
-                <div class="service__item">
-                    <img class="service__item_img" src="img/service/implantation.png" alt="implantation">
-                    <div class="service__item_title title title_fz28">
-                        Имплантация
-                    </div>
-                    <div class="service__item_descr">
-                        Это операция по установке в челюстную ткань специального стоматологического штифта, который будет играть роль корня.
-                    </div>
-                    <ul class="service__item_list">
-                        <li>Установка имплантов OSSTEM implant</li>
-                        <li>Наращивание кости (все виды аугментации) OSSTEM implant</li>
-                        <li>Имплантация зубов по системе All ON4-All ON6</li>
-                    </ul>
-                    <div class="messengers">
-                        <div class="messengersIcons">
-                            <img src="icons/telegram.svg" alt="telegram">
-                            <img src="icons/whatsApp.svg" alt="whatsApp">
-                        </div>
-                        <div>спросить в мессенджере</div>
-                    </div>
-                    <div class="service__item_btns">
-                        <button class="signUpBtn btn">Записаться</button>
-                        <button class="priceBtn btn">Узнать цены</button>
-                    </div>
-                </div>
-
-
-                <div class="service__item">
-                    <img class="service__item_img" src="img/service/orthodontics.png" alt="orthodontics">
-                    <div class="service__item_title title title_fz28">
-                        Ортодонтия
-                    </div>
-                    <div class="service__item_descr">
-                        Поможет сделать вашу улыбку красивой и исправит прикус. Исправляет аномалии челюстей, положения челюстей в черепе, формы, величины, соотношения зубных дуг.
-                    </div>
-                    <ul class="service__item_list">
-                        <li>Установка брекет систем</li>
-                        <li>Цифровое ортодонтическое лечение прозрачными каппами</li>
-                        <li>Полная диагностика и лечение взрослых и детей</li>
-                    </ul>
-                    <div class="messengers">
-                        <div class="messengersIcons">
-                            <img src="icons/telegram.svg" alt="telegram">
-                            <img src="icons/whatsApp.svg" alt="whatsApp">
-                        </div>
-                        <div>спросить в мессенджере</div>
-                    </div>
-                    <div class="service__item_btns">
-                        <button class="signUpBtn btn">Записаться</button>
-                        <button class="priceBtn btn">Узнать цены</button>
-                    </div>
-                </div>
-
-
-                <div class="service__item">
-                    <img class="service__item_img" src="img/service/whitening.png" alt="whitening">
-                    <div class="service__item_title title title_fz28">
-                        Отбеливание зубов
-                    </div>
-                    <div class="service__item_descr">
-                        Стоматологическая процедура изменения оттенка зубной эмали. Отбеливание зубов относится к области косметической стоматологии.
-                    </div>
-                    <ul class="service__item_list">
-                        <li>Система Opalescence Boost</li>
-                    </ul>
-                    <div class="messengers">
-                        <div class="messengersIcons">
-                            <img src="icons/telegram.svg" alt="telegram">
-                            <img src="icons/whatsApp.svg" alt="whatsApp">
-                        </div>
-                        <div>спросить в мессенджере</div>
-                    </div>
-                    <div class="service__item_btns">
-                        <button class="signUpBtn btn">Записаться</button>
-                        <button class="priceBtn btn">Узнать цены</button>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -467,7 +312,7 @@
                             <div class="slider__slide_speciality">Врач-стоматолог <span>Ведущий специалист</span></div>
                             <div class="slider__slide_descr">
                                 <h3>Опыт работы более 25 лет</h3>
-                                <span>Действующие сертификаты:</span> стоматология ортопедическая; стоматология хирургическая <span>Все виды высококачественного протезирования:</span> съемные, несъемные, безметалловые конструкции, цирконий, протезирование на имплантах, драгметаллах, вкладки, виниры, гнатология и хирургия
+                                <span>Действующие сертификаты:</span> стоматология ортопедическая; стоматология хирургическая <span>Направленность:</span> <br> съемные, несъемные, безметалловые конструкции, цирконий, протезирование на имплантах, драгметаллах, вкладки, виниры, гнатология и хирургия
                             </div>
                             <img src="img/doctors/doctor_1.png" alt="doctor_1">
                         </div>
@@ -479,7 +324,7 @@
                             <div class="slider__slide_descr">
                                 <h3>Опыт работы более 5 лет</h3>
                                 <span>Действующие сертификаты:</span> стоматология общей практики;
-                                стоматология хирургическая <span>Направленность:</span> имплантация, пародонтология, удаление зубов любой сложности
+                                стоматология хирургическая <span>Направленность:</span> <br> имплантация, пародонтология, удаление зубов любой сложности
                             </div>
                             <img src="img/doctors/doctor_2.png" alt="doctor_2">
                         </div>
@@ -491,7 +336,7 @@
                             <div class="slider__slide_descr">
                                 <h3>Опыт работы более 5 лет</h3>
                                 <span>Действующие сертификаты:</span> стоматология общей практики;
-                                стоматология хирургическая <span>Направленность:</span> протезирование зубов, хирургическое удаление, терапевтическое лечение и отбеливание
+                                стоматология хирургическая <span>Направленность:</span> <br> протезирование зубов, хирургическое удаление, терапевтическое лечение и отбеливание
                             </div>
                             <img src="img/doctors/doctor_3.png" alt="doctor_3">
                         </div>
@@ -503,7 +348,7 @@
                             <div class="slider__slide_descr">
                                 <h3>Опыт работы более 10 лет</h3>
                                 <span>Действующие сертификаты:</span> стоматология общей практики;
-                                стоматология терапевтическая; стоматология ортодонтическая <span>Направленность:</span> терапевтическое лечение, эстетическая реставрация зубов и исправление прикуса любой сложности
+                                стоматология терапевтическая; стоматология ортодонтическая <span>Направленность:</span> <br> терапевтическое лечение, эстетическая реставрация зубов и исправление прикуса любой сложности
                             </div>
                             <img src="img/doctors/doctor_4.png" alt="doctor_4">
                         </div>
@@ -515,7 +360,7 @@
                             <div class="slider__slide_descr">
                                 <h3>Опыт работы более 20 лет</h3>
                                 <span>Действующие сертификаты:</span> стоматология общей практики;
-                                стоматология ортопедическая <span>Направленность:</span> терапевтическое лечение, все виды протезирования, хирургическое удаление зубов
+                                стоматология ортопедическая <span>Направленность:</span> <br> терапевтическое лечение, все виды протезирования, хирургическое удаление зубов
                             </div>
                             <img src="img/doctors/doctor_5.png" alt="doctor_5">
                         </div>
@@ -527,7 +372,7 @@
                             <div class="slider__slide_descr">
                                 <h3>Опыт работы более 5 лет</h3>
                                 <span>Действующие сертификаты:</span> стоматология общей практики;
-                                стоматология хирургическая <span>Направленность:</span> терапевтическое лечение, эстетическая реставрация, хирургическое удаление зубов , профессиональная гигиена и отбеливание
+                                стоматология хирургическая <span>Направленность:</span> <br> терапевтическое лечение, эстетическая реставрация, хирургическое удаление зубов , профессиональная гигиена и отбеливание
                             </div>
                             <img src="img/doctors/doctor_6.png" alt="doctor_6">
                         </div>
@@ -590,37 +435,37 @@
                 Выбрав, интересующую вас услугу, <span>наш электронный помощник</span>, поможет вам быстро подобрать нужного специалиста
             </div>
             <div class="helper__wrapper">
-                <div class="helper__item">
+                <div class="helper__item" data-speciality="Хирургия">
                     <div class="helper__item_title">Хирургия</div>
                     <div class="helper__item_circle">
                         <img src="img/service/surgery.png" alt="surgery">
                     </div>
                 </div>
-                <div class="helper__item">
+                <div class="helper__item" data-speciality="Терапия">
                     <div class="helper__item_title">Терапия</div>
                     <div class="helper__item_circle">
                         <img src="img/service/therapy.png" alt="therapy">
                     </div>
                 </div>
-                <div class="helper__item">
+                <div class="helper__item" data-speciality="Ортопедия">
                     <div class="helper__item_title">Ортопедия</div>
                     <div class="helper__item_circle">
                         <img src="img/service/orthopedics.png" alt="orthopedics">
                     </div>
                 </div>
-                <div class="helper__item">
+                <div class="helper__item" data-speciality="Имплантация">
                     <div class="helper__item_title">Имплантация</div>
                     <div class="helper__item_circle">
                         <img src="img/service/implantation.png" alt="implantation">
                     </div>
                 </div>
-                <div class="helper__item">
+                <div class="helper__item" data-speciality="Ортодонтия">
                     <div class="helper__item_title">Ортодонтия</div>
                     <div class="helper__item_circle">
                         <img src="img/service/orthodontics.png" alt="orthodontics">
                     </div>
                 </div>
-                <div class="helper__item">
+                <div class="helper__item" data-speciality="Отбеливание">
                     <div class="helper__item_title">Отбеливание</div>
                     <div class="helper__item_circle">
                         <img src="img/service/whitening.png" alt="whitening">
@@ -939,6 +784,22 @@
                         <img src="icons/whatsApp.svg" alt="whatsApp">
                     </div>
                     <div class="messengers__text">спросить в мессенджере</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="helperModalId" class="modalHelper hide">
+        <div class="modalHelper__dialog">
+            <div class="modalHelper__content">
+                <div data-close class="modalHelper__close"></div>
+                <div class="modalHelper__title"><span>Можете выбрать профильного врача, специализирующегося на</span> Терапия</div>
+                <div class="modalHelper__subtitle">Выберите врача который вам подходит и кликните на его фото:</div>
+                <div class="modalHelper__wrapper">
+                </div>
+                <div class="modalHelper__btns">
+                    <a href="#helper" class="modalHelper__btns_otherService">Хотите выбрать другую услугу?</a>
+                    <a href="#" class="modalHelper__btns_main">На главную</a>
                 </div>
             </div>
         </div>
