--- a/src/index.html
+++ b/src/index.html
@@ -674,10 +674,8 @@
                 <div class="primaryConsult__title">
                     Запишитесь на бесплатную первичную консультацию и диагностику зубов
                 </div>
-                <div class="primaryConsult__descr">
-                    В ходе консультации вы получите 2-3 плана качественного лечения под ваш бюджет
-                </div>
                 <form action="#" class="signUpForm">
+                    <div class="signUpForm__title">В ходе консультации вы получите 2-3 плана качественного лечения под ваш бюджет</div>
                     <input class="signUpForm__name" placeholder="Имя" type="text">
                     <input class="signUpForm__phone" placeholder="Телефон" type="phone">
                     <button class="signUpForm__btn btn btn_color">Записаться</button>
@@ -757,10 +755,8 @@
         <div class="modalSignUp__dialog">
             <div class="modalSignUp__content">
                 <div data-close class="modalSignUp__close"></div>
-                <div class="modalSignUp__descr">
-                    Напишите ваши контактные данные и наши менеджеры свяжуться с вами в ближайшее время
-                </div>
                 <form action="#" class="signUpForm">
+                    <div class="signUpForm__title">Напишите ваши контактные данные и наши менеджеры свяжуться с вами в ближайшее время</div>
                     <input class="signUpForm__name" placeholder="Имя" type="text">
                     <input class="signUpForm__phone" placeholder="Телефон" type="phone">
                     <button class="signUpForm__btn btn btn_color">Записаться</button>
@@ -798,7 +794,7 @@
                 <div class="modalHelper__wrapper">
                 </div>
                 <div class="modalHelper__btns">
-                    <a href="#helper" class="modalHelper__btns_otherService">Хотите выбрать другую услугу?</a>
+                    <a href="#helper" class="modalHelper__btns_other">Хотите выбрать другую услугу?</a>
                     <a href="#" class="modalHelper__btns_main">На главную</a>
                 </div>
             </div>
