--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -697,7 +697,7 @@
                         </li>
                     </ul>
                 </div>
-                <img class="aboutClinic__img" src="" alt="">
+                <img class="aboutClinic__img" src="img/aboutClinic/aboutClinic_1.jpg" alt="aboutClinic_1">
             </div>
             <div class="aboutClinic__slider"> 
                 <div class="aboutClinic__slider-wrapper">
